--- a/components/chatbot-ui/requirements.txt
+++ b/components/chatbot-ui/requirements.txt
@@ -1,5 +1,5 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-jinja2>=3.1.2
-python-multipart>=0.0.6
-awsiotsdk>=1.19.0
+flask>=3.0.0
+requests>=2.31.0
+torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
+transformers>=4.35.0
+accelerate>=0.24.0
