--- a/components/chatbot-ui/requirements.txt
+++ b/components/chatbot-ui/requirements.txt
@@ -1,5 +1,5 @@
 flask>=3.0.0
 requests>=2.31.0
-torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
+torch>=2.0.0
 transformers>=4.35.0
 accelerate>=0.24.0
